--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,22 @@
 # Site settings
 title: Mantra hq
 email: hello@mantrahq.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+description: > # this means to ignore newlines until "baseurl:"§
+    At Mantra we create strategies and online marketing models for businesses
+    that aren't shrouded in jargon.
 baseurl: "" # the subpath of your site, e.g. /blog/
 year: 2015
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: mantramedia
+url: "http://www.mantrahq.com" # the base hostname & protocol for your site
+
+paginate: 5
+paginate_path: "blog/page:num/"
+
+user_twitter: mantramedia
+user_facebook: MantraMedia
+user_linkedin: mantramedia
+user_pintrest: mantramedia
+user_youtube: mantramedia
+
 
 # Build settings
 markdown: kramdown
